[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/atlas_gui.png" type="Texture" id=1]
[ext_resource path="res://game/touch_controls.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=362]
atlas = ExtResource( 1 )
region = Rect2( 14, 272, 34, 32 )

[sub_resource type="AtlasTexture" id=358]
atlas = ExtResource( 1 )
region = Rect2( 14, 240, 34, 32 )

[sub_resource type="ConvexPolygonShape2D" id=361]
points = PoolVector2Array( -19, 0, -3, 16, 17, 16, 17, -16, -3, -16 )

[sub_resource type="AtlasTexture" id=366]
atlas = ExtResource( 1 )
region = Rect2( 16, 384, 80, 80 )

[sub_resource type="AtlasTexture" id=363]
atlas = ExtResource( 1 )
region = Rect2( 16, 304, 80, 80 )

[sub_resource type="RectangleShape2D" id=360]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=365]
extents = Vector2( 640, 360 )

[sub_resource type="AtlasTexture" id=367]
atlas = ExtResource( 1 )
region = Rect2( 48, 262, 22, 22 )

[sub_resource type="AtlasTexture" id=368]
atlas = ExtResource( 1 )
region = Rect2( 48, 240, 22, 22 )

[node name="TouchControls" type="CanvasLayer"]
layer = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 656.0, 592.0 ]
}

[node name="DirectionBtns" type="Node2D" parent="."]
position = Vector2( 32, 474 )
scale = Vector2( 2, 2 )

[node name="TouchBtn_L" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 34, 60 )
rotation = 3.14159
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
visibility_mode = 1

[node name="TouchBtn_U" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 27.5, 34 )
rotation = -1.5708
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="TouchBtn_R" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 53.5, 28 )
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="TouchBtn_D" type="TouchScreenButton" parent="DirectionBtns"]
position = Vector2( 59, 53.5 )
rotation = 1.5708
normal = SubResource( 362 )
pressed = SubResource( 358 )
shape = SubResource( 361 )
shape_visible = false
passby_press = true
visibility_mode = 1

[node name="TouchBtn_Burst" type="TouchScreenButton" parent="."]
position = Vector2( 1089, 488 )
scale = Vector2( 2, 2 )
normal = SubResource( 366 )
pressed = SubResource( 363 )
shape = SubResource( 360 )
shape_visible = false
visibility_mode = 1

[node name="TouchBtnScreen" type="TouchScreenButton" parent="."]
shape = SubResource( 365 )
visibility_mode = 1

[node name="TouchBtnPause" type="TouchScreenButton" parent="."]
position = Vector2( 32, 72 )
scale = Vector2( 2, 2 )
normal = SubResource( 367 )
pressed = SubResource( 368 )
shape = SubResource( 361 )
shape_visible = false
visibility_mode = 1

[node name="TouchBtnSkip" type="TouchScreenButton" parent="."]
position = Vector2( 648, -1 )
scale = Vector2( 2, 2 )
normal = SubResource( 367 )
pressed = SubResource( 368 )
shape = SubResource( 361 )
shape_visible = false
visibility_mode = 1
